--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://bootswatch.com/4/solar/bootstrap.min.css"
+    />
   </head>
-  <body></body>
+  <body>
+    <div id="app"></div>
+    <script src="https://unpkg.com/browse/vue@2.6.11/"></script>
+    <script src="client.js"></script>
+  </body>
 </html>
